<resources>
    <string name="app_name">UW Rate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="uw_email_string">UW Email</string>
    <string name="password_string">Password</string>
    <string name="student_string">Student</string>
    <string name="admin_string">Admin</string>
    <string name="create_account_string">Create Account</string>
    <string name="login_string">Login</string>
    <string name="first_name_string">First Name</string>
    <string name="last_name_string">Last Name</string>
    <string name="email_string">Email</string>
    <string name="gender_string">Gender</string>
    <string name="register_string">Register</string>
    <string name="boo_key">boo key</string>
    <string name="search_professor_string">Search Professor</string>
    <string name="review_here">Your Review Here</string>
    <string name="your_review">Your Review</string>
    <string name="submit_review">Submit Review</string>
    <string name="example_comment_string">This is the comment text in the review item. It can be very long. It can be up to 512 characters at the moment. This comment is  only half as long as that, so something needs to be done about word wrapping. Also this has nothing to do with the instructor..</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

</resources>
